--- a/SpecFlowProject/SpecFlowProject.csproj
+++ b/SpecFlowProject/SpecFlowProject.csproj
@@ -6,15 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <CustomAdditionalCompileInputs Remove="Features\Calculator.feature.cs" />
+    <CustomAdditionalCompileInputs Remove="Test\Features\Calculator.feature.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowObsoleteCodeBehindFiles Remove="Features\SpecFlowFeature.feature.cs" />
+    <SpecFlowObsoleteCodeBehindFiles Remove="Test\Features\SpecFlowFeature.feature.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <UpToDateCheckBuild Remove="Features\Calculator.feature.cs" />
+    <UpToDateCheckBuild Remove="Test\Features\Calculator.feature.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,8 +57,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
-    <Folder Include="Pages\" />
+    <Folder Include="Main\Helpers\" />
+    <Folder Include="Main\Pages\" />
   </ItemGroup>
 
 </Project>
