--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,6 @@ jobs:
         firefox-version: latest
     - run: firefox --version
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal ./SpecFlowProject/SpecFlowProject.csproj
     
     
