--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal ./SpecFlowProject/SpecFlowProject.csproj
     - uses: actions/upload-artifact@v2
+      if: always()
       with:
         name: my-artifact
         path: /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/SpecFlowProject/TestResults/
