--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,6 +35,10 @@ jobs:
       if: always()
       with:
         name: my-artifact
-        path: /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/SpecFlowProject/TestResults/
+        path: |
+          /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/SpecFlowProject/TestResults/
+          /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/TestResults/
+    
+        
     
     
