--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,10 +34,16 @@ jobs:
     - uses: actions/upload-artifact@v2
       if: always()
       with:
-        name: my-artifact
-        path: |
+        name: specfloe-report
+        path:   
           /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/SpecFlowProject/TestResults/
-          /home/runner/work/SpecflowPlusRunner/TestResults/
+    - uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: extent-report
+        path:
+          /home/runner/work/SpecflowPlusRunner/TestResults/SpecRun/      
+    
     
         
     
