--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,11 @@ jobs:
     # The Firefox version to install and use. Examples: 84.0, 84.0.1, latest-esr
         firefox-version: 84.0.2
     - run: firefox --version
+    - name: Setup Chrome
+      uses: browser-actions/setup-chrome@latest
+      with:
+          # The Chromium version to install and use.
+          chromium-version: latest
     - name: Test
       run: dotnet test --no-build --verbosity normal ./SpecFlowProject/SpecFlowProject.csproj
     - uses: actions/upload-artifact@v2
