--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,13 +33,13 @@ jobs:
       uses: browser-actions/setup-chrome@latest
       with:
           # The Chromium version to install and use.
-          chromium-version: latest
+          chromium-version: 89.0.4389.128
     - name: Test
       run: dotnet test --no-build --verbosity normal ./SpecFlowProject/SpecFlowProject.csproj
     - uses: actions/upload-artifact@v2
       if: always()
       with:
-        name: specfloe-report
+        name: specflow-report
         path:   
           /home/runner/work/SpecflowPlusRunner/SpecflowPlusRunner/SpecFlowProject/TestResults/
     - uses: actions/upload-artifact@v2
