Change to scenario context

--- a/SpecFlowProject/SpecFlowProject.csproj
+++ b/SpecFlowProject/SpecFlowProject.csproj
@@ -52,7 +52,7 @@
     <None Update="Default.srprofile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="my.runsettings">
+    <None Update="MySettings.runsettings">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
