--- a/SpecUnit/SpecUnit.csproj
+++ b/SpecUnit/SpecUnit.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="SpecFlow" Version="3.7.38" />
     <PackageReference Include="SpecFlow.CustomPlugin" Version="3.7.38" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.7.38" />
+    <PackageReference Include="SpecFlow.NUnit.Runners" Version="3.7.38" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.7.38" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="WebDriverManager" Version="2.11.1" />
